--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "ejs": "~2.5.5",
     "express": "~4.14.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "serve-favicon": "~2.3.2",
+    "node-schedule": "^1.2.0",
+    "request": "^2.75.0"
   }
 }
