--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
+    "express-session": "^1.15.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2",
     "node-schedule": "^1.2.0",
-    "request": "^2.75.0"
+    "request": "^2.75.0",
+    "serve-favicon": "~2.3.2"
   }
 }
