--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
   },
   "dependencies": {
     "body-parser": "~1.16.0",
+    "connect": "^3.6.2",
+    "connect-redis": "^3.3.0",
     "cookie-parser": "~1.4.3",
     "cron": "^1.2.1",
     "debug": "~2.6.0",
     "ejs": "~2.5.5",
     "express": "~4.14.1",
-    "express-session": "^1.15.1",
+    "express-session": "^1.15.2",
     "morgan": "~1.7.0",
     "node-schedule": "^1.2.0",
+    "redis": "^2.7.1",
     "request": "^2.75.0",
     "serve-favicon": "~2.3.2"
   }
